--- a/tools/docker/Dockerfile.ubuntu
+++ b/tools/docker/Dockerfile.ubuntu
@@ -11,7 +11,11 @@ MAINTAINER Vincent <linsong.qizi@gmail.com>
 LABEL Vendor="Sedona"
 LABEL version=develop
 
-RUN apt-get update && apt-get install -y build-essential libc6-dev-i386 python default-jdk && apt-get purge -y man && apt-get clean autoclean && apt-get autoremove -y 
+RUN apt-get update &&\
+ apt-get install -y build-essential libc6-dev-i386 python default-jdk &&\
+ apt-get purge -y man &&\
+ apt-get clean autoclean &&\
+ apt-get autoremove -y
 
 ENV JAVA_HOME /usr/lib/jvm/java-7-openjdk-amd64
 ENV PATH $PATH:$JAVA_HOME/bin
