--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,7 +46,7 @@ markdown_extensions:
   - admonition
   - codehilite:
       guess_lang: false
-      linenums: true
+      linenums: false
   - footnotes
   - toc:
       permalink: true
