--- a/tools/docker/Dockerfile.ubuntu
+++ b/tools/docker/Dockerfile.ubuntu
@@ -5,7 +5,7 @@
 #    2015 Nov 02   Vincent   Initial Docker Image(Ubuntu)
 #
 
-FROM phusion/baseimage
+FROM phusion/baseimage:master
 MAINTAINER Vincent <linsong.qizi@gmail.com>
 
 LABEL Vendor="Sedona"
@@ -19,3 +19,6 @@ RUN apt-get update &&\
 
 ENV JAVA_HOME /usr/lib/jvm/default-java
 ENV PATH $PATH:$JAVA_HOME/bin
+
+# Copy .bashrc file
+COPY .bashrc /root
